temp/objects/Supplier__c.object
<CustomObject>
    <description>The third part company or organization.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovId__c</fullName>
        <description>In Brazil, it refers to CNPJ.</description>
        <externalId>true</externalId>
        <inlineHelpText>In Brazil, it refers to CNPJ.</inlineHelpText>
        <label>Government Id</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>GovId__c</columns>
        <columns>Contact__c</columns>
        <columns>Objective__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>